# sound-void

./: .gitignore  README.md
benchmarks/: CMakeLists.txt
benchmarks/hello_world/: main.cpp
examples/linux-jack-gui/: CMakeLists.txt  main.cpp
experiments/inline_or_not/: CMakeLists.txt  README.md  benchmark_inline.cpp  benchmark_not_inline.cpp  library.c  library.h  library_inline.h
tests/: CMakeLists.txt  hello-test.c
vendors/nonius/test/: manual_clock.h++
vendors/unity/: CMakeLists.txt
